fix z-index for signed n dropdown and green background

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -417,7 +417,8 @@ a.card:visted {
   color: #fff !important;
 }
 
-div#dynamicNav.fixedtop{
+#nav{
+  z-index: 1031;
 }
 
 #dropdown{
